[package]
name = "tracing-indicatif"
version = "0.3.11"
edition = "2024"
description = "Tracing layer that automatically creates and manages progress bars for active spans."
license = "MIT"
repository = "https://github.com/emersonford/tracing-indicatif"
categories = ["command-line-interface"]
keywords = ["cli", "progress", "progressbar", "progress-bar", "tracing"]
documentation = "https://docs.rs/tracing-indicatif"
exclude = ["*.gif"]

[dependencies]
# TODO: return to the latest version of indicatif once the index() method is published.
# indicatif = { version = "0.18.0", features = ["in_memory"] }
tracing = "0.1.41"
tracing-core = "0.1.34"
tracing-subscriber = { version = "0.3.19" }

# Temporary override until method index() is published here:
# https://github.com/console-rs/indicatif/pull/724
[dependencies.indicatif]
git = "https://github.com/strowk/indicatif"
rev = "f2dc688fc6c577ecda6103d70e746ecdd3ca5579"
features = ["in_memory"]

[dev-dependencies]
futures = "0.3.31"
tokio = { version = "1.41.1", features = ["full"] }
rand = { version = "0.9.1", features = ["std_rng"] }
dialoguer = "0.11.0"

[lib]
name = "tracing_indicatif"

[[example]]
name = "basic"

[[example]]
name = "child_spans"

[[example]]
name = "build_console"

[[example]]
name = "per_span_style"

[[example]]
name = "progress_bar"

[[example]]
name = "filter"

[[example]]
name = "multithread"

[[example]]
name = "stdout_stderr_printing"

[[example]]
name = "dialoguer_suspend"
